controller_board/esp_code/esp_now_bot/espnow/build/log/idf_py_stdout_output_2940661
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd "/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/build/bootloader/esp-idf/esptool_py" && /home/marcus/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/marcus/esp/esp-idf-v5.5.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /media/marcus/BCF853CFF8538714/Users/Marcus\ Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/build/bootloader/bootloader.bin
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/espnow_example_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/espnow_example_main.c.obj 
/home/marcus/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/build/config" -I"/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main" -I/home/marcus/esp/esp-idf-v5.5.3/components/newlib/platform_include -I/home/marcus/esp/esp-idf-v5.5.3/components/freertos/config/include -I/home/marcus/esp/esp-idf-v5.5.3/components/freertos/config/include/freertos -I/home/marcus/esp/esp-idf-v5.5.3/components/freertos/config/xtensa/include -I/home/marcus/esp/esp-idf-v5.5.3/components/freertos/FreeRTOS-Kernel/include -I/home/marcus/esp/esp-idf-v5.5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/marcus/esp/esp-idf-v5.5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/marcus/esp/esp-idf-v5.5.3/components/freertos/esp_additions/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/include/soc -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/include/soc/esp32s3 -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/dma/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/ldo/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/debug_probe/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/mspi_timing_tuning/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/power_supply/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/port/esp32s3/. -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/port/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5.3/components/heap/include -I/home/marcus/esp/esp-idf-v5.5.3/components/heap/tlsf -I/home/marcus/esp/esp-idf-v5.5.3/components/log/include -I/home/marcus/esp/esp-idf-v5.5.3/components/soc/include -I/home/marcus/esp/esp-idf-v5.5.3/components/soc/esp32s3 -I/home/marcus/esp/esp-idf-v5.5.3/components/soc/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5.3/components/soc/esp32s3/register -I/home/marcus/esp/esp-idf-v5.5.3/components/hal/platform_port/include -I/home/marcus/esp/esp-idf-v5.5.3/components/hal/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5.3/components/hal/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_rom/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_rom/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_rom/esp32s3/include/esp32s3 -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_rom/esp32s3 -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_common/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_system/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_system/port/soc -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_system/port/include/private -I/home/marcus/esp/esp-idf-v5.5.3/components/xtensa/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5.3/components/xtensa/include -I/home/marcus/esp/esp-idf-v5.5.3/components/xtensa/deprecated_include -I/home/marcus/esp/esp-idf-v5.5.3/components/lwip/include -I/home/marcus/esp/esp-idf-v5.5.3/components/lwip/include/apps -I/home/marcus/esp/esp-idf-v5.5.3/components/lwip/include/apps/sntp -I/home/marcus/esp/esp-idf-v5.5.3/components/lwip/lwip/src/include -I/home/marcus/esp/esp-idf-v5.5.3/components/lwip/port/include -I/home/marcus/esp/esp-idf-v5.5.3/components/lwip/port/freertos/include -I/home/marcus/esp/esp-idf-v5.5.3/components/lwip/port/esp32xx/include -I/home/marcus/esp/esp-idf-v5.5.3/components/lwip/port/esp32xx/include/arch -I/home/marcus/esp/esp-idf-v5.5.3/components/lwip/port/esp32xx/include/sys -I/home/marcus/esp/esp-idf-v5.5.3/components/nvs_flash/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_partition/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_event/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_netif/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_wifi/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_wifi/include/local -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_wifi/wifi_apps/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_wifi/wifi_apps/nan_app/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_phy/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_phy/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_driver_gpio/include -I/home/marcus/esp/esp-idf-v5.5.3/components/esp_driver_ledc/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow=." -fmacro-prefix-map=/home/marcus/esp/esp-idf-v5.5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/espnow_example_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/espnow_example_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/espnow_example_main.c.obj -c '/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main/espnow_example_main.c'
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main/espnow_example_main.c: In function 'pwm_task':
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main/espnow_example_main.c:545:12: warning: absolute value function 'fabsf' given an argument of type 'double' but has parameter of type 'float' which may cause truncation of value [-Wabsolute-value]
  545 |         if(fabsf(z_real) < 0.02)
      |            ^~~~~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main/espnow_example_main.c:549:12: warning: absolute value function 'fabsf' given an argument of type 'double' but has parameter of type 'float' which may cause truncation of value [-Wabsolute-value]
  549 |         if(fabsf(z_imm) < 0.02)
      |            ^~~~~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main/espnow_example_main.c:541:20: warning: unused variable 'temp' [-Wunused-variable]
  541 |         adc_snap_t temp = *adc_struct; // copy the struct
      |                    ^~~~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main/espnow_example_main.c:592:54: error: 'turn_duty_r' may be used uninitialized [-Werror=maybe-uninitialized]
  592 |         ledc_set_duty(LEDC_MODE, PWM_R_CHANNEL, duty + turn_duty_r);
      |                                                 ~~~~~^~~~~~~~~~~~~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main/espnow_example_main.c:579:13: note: 'turn_duty_r' was declared here
  579 |         int turn_duty_r, turn_duty_l;
      |             ^~~~~~~~~~~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main/espnow_example_main.c:589:54: error: 'turn_duty_l' may be used uninitialized [-Werror=maybe-uninitialized]
  589 |         ledc_set_duty(LEDC_MODE, PWM_L_CHANNEL, duty + turn_duty_l);
      |                                                 ~~~~~^~~~~~~~~~~~~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/esp_now_bot/espnow/main/espnow_example_main.c:579:26: note: 'turn_duty_l' was declared here
  579 |         int turn_duty_r, turn_duty_l;
      |                          ^~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
